--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,8 @@
 members = ["cli", "tools/orion", "tools/warden"]
 
 resolver = "3"
+
+[workspace.dependencies]
+winreg = "0.55.0"
+thiserror = "2"
+clap = {version = "4.5.53", features = ["derive"]}
