--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,7 @@ resolver = "3"
 
 [workspace.dependencies]
 winreg = "0.55.0"
+wmi = "0.18"
 thiserror = "2"
+serde = "1.0.228"
 clap = {version = "4.5.53", features = ["derive"]}
