--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,14 @@ resolver = "3"
 
 [workspace.dependencies]
 wmi = "0.18"
+winreg = "0.55.0"
+windows = {version = ">=0.59, <=0.62", features = [
+    "Win32_System_UpdateAgent",
+    "Win32_Foundation",
+    "Win32_System_Com",
+    "Win32_System_Ole",
+]}
+chrono = "0.4.42"
 serde = "1.0.228"
 rustyline = "17.0.2"
 colored = "3.0.0"
