--- a/tools/warden/Cargo.toml
+++ b/tools/warden/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 serde.workspace = true
+windows.workspace = true
 
 [target.'cfg(windows)'.dependencies]
 wmi.workspace = true
+winreg.workspace = true
