--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,8 @@ windows = {version = ">=0.59, <=0.62", features = [
     "Win32_System_UpdateAgent",
     "Win32_Foundation",
     "Win32_System_Com",
-    "Win32_System_Ole",
+    "Win32_System_Wmi"
 ]}
-chrono = "0.4.42"
 serde = "1.0.228"
 rustyline = "17.0.2"
 colored = "3.0.0"
