Switched from rustyline to clap and cleaned up code and comments

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,6 +5,4 @@ edition = "2024"
 
 [dependencies]
 warden = {path = "../tools/warden"}
-
-rustyline.workspace = true
-colored.workspace = true
+clap.workspace = true
