--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,13 @@ members = ["cli", "tools/orion", "tools/warden"]
 resolver = "3"
 
 [workspace.dependencies]
-wmi = "0.18"
-winreg = "0.55.0"
 windows = {version = ">=0.59, <=0.62", features = [
     "Win32_System_UpdateAgent",
     "Win32_Foundation",
     "Win32_System_Com",
     "Win32_System_Wmi",
+    "Win32_System_Ole",
+    "Win32_System_Variant",
     "Win32_NetworkManagement_WindowsFirewall"
 ]}
-serde = "1.0.228"
-rustyline = "17.0.2"
-colored = "3.0.0"
+clap = {version = "4.5.53", features = ["derive"]}
