--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ windows = {version = ">=0.59, <=0.62", features = [
     "Win32_System_Ole",
     "Win32_System_Variant",
     "Win32_System_Registry",
-    "Win32_NetworkManagement_WindowsFirewall"
+    "Win32_NetworkManagement_WindowsFirewall",
+    "Win32_NetworkManagement_NetManagement"
 ]}
 clap = {version = "4.5.53", features = ["derive"]}
